syntax = "proto3";

package task;

import "google/protobuf/timestamp.proto";

service TasksService {
  rpc FindOne (TaskById) returns (Task) {}
}

message TaskById {
  int32 id = 1;
}

message Task {
  int32 id = 1;
  int32 parentId = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}
